--- a/index.html
+++ b/index.html
@@ -1,8 +1,29 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta charset="utf-8">
         <title>Welcome 👋🏻</title>
+        <meta charset="utf-8">
+        <meta name="author" content="Nikita Khomitsevych">
+        <meta name="description" content="hamsternik's lab about programming experiments">
+        <link rel="icon" href="favicon.ico">
+
+        <meta property="og:title" content="Welcome 👋🏻">
+        <meta property="og:site_name" content="hamsternik's lab">
+        <meta property="og:type" content="article">
+        <!-- <meta name="og:image" content="https://www.hamsternik.com/images/face-1200x1200.jpg"> -->
+        <!-- <meta name="og:image:width" content="1200">  -->
+        <!-- <meta name="og:image:height" content="1200"> -->
+
+        <meta name="telegram:channel" content="@hamsterniknews">
+        <meta name="twitter:creator" content="@hamsternik">
+        <meta name="twitter:site" content="@hamsternik">
+        <meta name="twitter:title" property="og:title" content="hamsternik's lab about programming experiments">
+        <meta name="twitter:description" property="og:description" content="full stack frontend (Swift / JS / TS); creator of 'iOS from scratch' course; behind @welcomepass_app; former @life360">
+        <meta name="twitter:url" property="og:url" content="https://www.hamsternik.com/">
+        <!-- <meta name="twitter:image" content="https://www.hamsternik.com/images/face-1200x1200.jpg"> -->
+        <!-- <meta name="twitter:card" content="summary_large_image"> -->
+        <!-- <meta name="twitter:image:width" content="1200"> -->
+        <!-- <meta name="twitter:image:height" content="1200"> -->
     </head>
     <body>
         <div class="contacts-social">
