add internet provider speed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
                 <li><a href="https://www.linkedin.com/in/khomitsevych/" rel="nofollow" title="My LinkedIn Profile" target="_blank">LINKEDIN</a></li>
                 <li><a href="https://t.me/hamsterniknews" rel="nofollow" title="My Telegram public channel" target="_blank">TELEGRAM</a></li>
             </ul>
+
+        <p>Home: Internet Provider's speed</p>
+        <img src="https://2ip.ua/service/speedtest/speedimg/big/1/dXA9NS43MSZkb3duPTQyLjA3Jm09Mi42NSwyNS43NSwzNi4wOCw0NC4wNSZwaW5nPTUxJnNpZD04NDUzNzc5JmlwPTI5NTUyNTkyMzEmZGF0ZT0zLzEwLzIwMjImdD0xMjozMQ%3D%3D.png" />
         </div>
     </body>
 </html>
